<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="GVL_Telescope" Id="{a7572ab9-17bf-4e0d-b71f-e76e531b6203}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// BT9 mirror
	temperature_mirror2		AT%I*: INT;
	// BT10
	temperature_mirror1		AT%I*: INT;
	// BT11
	temperature_mirror3		AT%I*: INT;
	// BT12
	temperature_tube		AT%I*: INT;
	// BT13
	temperature_bearing1	AT%I*: INT;
	// BT14
	temperature_bearing2	AT%I*: INT;
	// BT15
	temperature_cabinet		AT%I*: INT;

	//DOUT6 0.5
	brake_azimuth_eve	AT%Q*: BOOL;
	
	// DIN28 3.3 (absolute)
	azimut_limit_switch	AT%I*: BOOL;
	// DIN29 3.4
	focus_limit_near	AT%I*: BOOL;
	// DIN30 3.5
	focus_limit_far		AT%I*: BOOL;
	// DIN31 3.6
	nasmyth_limit_left	AT%I*: BOOL;
	// DIN32 3.7
	nasmyth_limit_right	AT%I*: BOOL;
	
	// DIN33 4.0
	cover1_open		AT%I*: BOOL;
	// DIN34 4.1
	cover1_closed	AT%I*: BOOL;
	// DIN35 4.2
	cover2_open		AT%I*: BOOL;
	// DIN36 4.3
	cover2_closed	AT%I*: BOOL;
	// DIN37 4.4
	cover3_open		AT%I*: BOOL;
	// DIN38 4.5
	cover3_closed	AT%I*: BOOL;

	//DOUT14 1.5
	focus_lock		AT%Q*: BOOL;
	//DOUT15 4.6
	nasmyth_lock	AT%Q*: BOOL;
	//Horn 4.7
	horn			AT%Q*: BOOL;
	
	// calibration signal for elevation
	elevation_calibration	AT%I*: BOOL;
	// calibration signal for azimuth
	azimuth_calibration		AT%I*: BOOL;
	// digitale inputs der Endlagen
	Derotator_inputs		AT%I*: WORD;
	// Controlword for homing
	Derotator_ControlDWord	AT%Q*: DWORD;
	// derotator torque feedback
	Derotator_torque		AT%I*: INT;
	
	// digital inputs for limit switches
	Elevation_inputs		AT%I*: WORD;
	// C1D error
	Elevation_class1		AT%I*: INT;
	// diagnostic number
	Elevation_diagnostic	AT%I*: UDINT;
	// torque feedback
	Elevation_torque		AT%I*: INT;
	
	// digital inputs for limit switches
	Azimuth_inputs			AT%I*: WORD;
	// C1D error
	Azimuth_class1			AT%I*: INT;
	// diagnostic number
	Azimuth_diagnostic		AT%I*: UDINT;
	// torque feedback
	Azimuth_torque			AT%I*: INT;
	
	// dewar pressure 0..10V Pfeiffer 
	pressure_Dewar			AT%I*: INT;
	// dewar temperature PT100
	temperature_Dewar		AT%I*: INT;
	
	// Zyklisches Interface zwischen NC und Achse
	AzimuthAxisRef: 	AXIS_REF;
	ElevationAxisRef: 	AXIS_REF;
	DerotatorAxisRef: 	AXIS_REF;
 	// Motor1 Channel 1
	FocusAxisRef:		AXIS_REF;
	// Motor1 Channel 2 
	Nasmyth_axis:		MDP5001_511_733_2BD37790;

	// Motor2 Channel 1; MDP5001_511_733_2BD37790
	Cover1_axis: 		MDP5001_511_733_2BD37790;
	// Motor2 Channel 2: MDP5001_511_733_2BD37790
	Cover2_axis: 		MDP5001_511_733_2BD37790;
	// Motor3 Channel 1: MDP5001_511_733_BA4AEFF1
	Cover3_axis: 		MDP5001_511_733_BA4AEFF1;
		
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>